kubernetes/petfriendsshop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petfriendsshop-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petfriendsshop-backend
  template:
    metadata:
      labels:
        app: petfriendsshop-backend
    spec:
      containers:
        - name: petfriendsshop-backend
          image: 811288377093.dkr.ecr.us-west-2.amazonaws.com/petfriendsshop-backend:latest
          ports: 
            - containerPort: 8080
          imagePullPolicy: Always
