kubernetes/petfriendsshop-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: petfrindsshop-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/petfrindsshops"
spec:
  selector:
    app:  petfrindsshop-backend
  type: NodePort
  ports:
    - port: 8083
      targetPort: 8080
      protocol: TCP
